--- a/www/home.html
+++ b/www/home.html
@@ -1,18 +1,23 @@
 <!-- Wappler include head-page="index.html" is="dmx-app" id="home" appConnect="local" bootstrap5="local" capacitor="local" components="{dmxAnimateCSS:{},dmxValidator:{},dmxStateManagement:{},dmxFormatter:{}}" -->
-<script is="dmx-flow" id="usuario_logado" type="text/dmx-flow" autorun="true">{
-  condition: {
-    outputType: "boolean",
-    if: "{{id_usuario.data.id.isDefined()}}",
-    then: {
-      steps: {
-        run: {
-          outputType: "text",
-          action: "{{navegacao.goto('../interno/backoffice.html')}}"
+<script is="dmx-flow" id="usuario_logado" type="text/dmx-flow" autorun="true">[
+  {
+    wait: {delay: 3000}
+  },
+  {
+    condition: {
+      outputType: "boolean",
+      if: "{{id_usuario.data.id.isDefined()}}",
+      then: {
+        steps: {
+          run: {
+            outputType: "text",
+            action: "{{navegacao.goto('../interno/backoffice.html')}}"
+          }
         }
       }
     }
   }
-}</script>
+]</script>
 <dmx-local-manager id="id_usuario"></dmx-local-manager>
 <div class="container-fluid p-5 h-100">
     <div class="row h-100 align-items-center">
