--- a/www/home.html
+++ b/www/home.html
@@ -42,7 +42,7 @@
                 <main class="w-100 d-flex justify-content-center mb-4">
                     <div class="col-12 col-sm-10 col-md-8 col-lg-10 col-xl-9 col-xxl-8 p-4 p-md-5 p-lg-6 glass-background-solid">
                         <div class="text-center mb-4">
-                            <h1 class="h3 mb-2">Bem-vindo(a) {{view1.id_usuario.data.id}}</h1>
+                            <h1 class="h3 mb-2">Bem-vindo(a)</h1>
                             <p class="h6 text-muted mb-0">Acesse o seu CRM de atendimento e prospecção de alunos</p>
                         </div>
 
