--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -55,9 +55,16 @@
         <div class="row border-top border-bottom border-dark-subtitle bg-white py-3">
             <div class="col-1 align-self-center text-center"><a href="/in/security/" internal="true" class="me-2"><img src="../assets/images/logo_fundo%20branco.png" class="img-fluid" width="48"></a></div>
             <div class="col align-self-center">
-                <div class="d-flex flex-row justify-content-start gap-2 align-items-center"><select id="id_empresa" class="form-select select-border" dmx-bind:options="listar_empresas.data.query_empresas" optiontext="nome_polo" optionvalue="id_empresa" name="id_empresa" dmx-bind:value="usuario.data.query[0].empresa_selecionada">
-                        <option selected="" value="">Mudar de empresa</option>
-                    </select><button id="btn1" class="btn btn-primary" dmx-on:click="selecionar_empresa.load({id_usuario: idUsuario.data.id, id_empresa: id_empresa.selectedValue});navegacao.reload()"><i class="fas fa-plus fa-sm"></i><br></button>
+                <div class="d-flex flex-row justify-content-start gap-2 align-items-stretch">
+
+
+                    <div class="input-group w-auto" lang="pt">
+                        <select class="form-select select-border" id="inputGroupSelect04" aria-label="Example select with button addon" dmx-bind:options="listar_empresas.data.query_empresas" optiontext="nome_polo" optionvalue="id_empresa" dmx-bind:value="usuario.data.query[0].empresa_selecionada">
+                            <option selected="" value="">Mudar de empresa</option>
+                        </select>
+                        <button class="btn btn-dark" type="button" dmx-on:click="selecionar_empresa.load({id_usuario: idUsuario.data.id, id_empresa: inputGroupSelect04.selectedValue});navegacao.reload()"><i class="fas fa-plus fa-sm px-2"></i><br></button>
+                    </div>
+
                     <button id="btn2" class="btn btn-dark" dmx-on:click="navegacao.reload()">Atualizar</button>
                 </div>
 
