--- a/www/interno/colaborador.html
+++ b/www/interno/colaborador.html
@@ -1,6 +1,27 @@
-<!-- Wappler include head-page="backoffice.html" is="dmx-app" id="colaborador" appConnect="local" bootstrap5="local" capacitor="local" components="{dmxBootstrap5Modal:{},dmxValidator:{},dmxBootstrap5TableGenerator:{}}" -->
+<!-- Wappler include head-page="backoffice.html" is="dmx-app" id="colaborador" appConnect="local" bootstrap5="local" capacitor="local" components="{dmxBootstrap5Modal:{},dmxValidator:{},dmxBootstrap5TableGenerator:{},dmxDataTraversal:{},dmxFormatter:{}}" -->
+<dmx-serverconnect id="desativar_usuario" noload="true" url="http://localhost:3000/api/desativa-colaborador" site="backendMarte" dmx-param:id_usuario="data_colaborador.data.id_usuarios" dmx-on:success="listar_colaboradores.load({id_empresa_atual: usuario.data.query[0].empresa_selecionada});data_colaborador.select(0);modal_desativar.hide();notificacoes.success('Colaborador desativado com sucesso!')" dmx-on:error="data_colaborador.select(0);modal_desativar.hide();notificacoes.danger('Ocorreu um erro: '+lastError.status+lastError.message+lastError.response+'. Entre em contato com o suporte!')"></dmx-serverconnect>
+
 <dmx-serverconnect id="listar_colaboradores" url="http://localhost:3000/api/listar-colaboradores" site="backendMarte" dmx-param:id_empresa_atual="usuario.data.query[0].empresa_selecionada"></dmx-serverconnect>
 
+<dmx-data-detail id="data_colaborador" dmx-bind:data="listar_colaboradores.data.query_colaboradores" key="id_usuarios"></dmx-data-detail>
+<div class="modal" id="modal_desativar" is="dmx-bs5-modal" tabindex="-1" nocloseonclick="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Desativar colaborador</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" dmx-on:click="data_empresa.select(0)"></button>
+            </div>
+            <div class="modal-body text-center">
+                <i class="fas fa-exclamation-circle fa-3x mb-3 text-warning"></i>
+                <p class="text-center">Você está prestes a desativar o colaborador(a) <b>{{data_colaborador.data.nome_tratamento}}</b>. Essa ação é irreversível. Para reativar, será necessário abrir um chamado de suporte. Deseja continuar?</p>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" dmx-on:click="data_empresa.select(0)">Cancelar</button>
+                <button type="button" class="btn btn-danger" dmx-on:click="desativar_usuario.load({id_usuario: data_colaborador.data.id_usuarios})">Sim! Quero continuar!</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="modal" id="modal_criar" is="dmx-bs5-modal" tabindex="-1" nocloseonclick="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -9,7 +30,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" dmx-on:click="form_criar_colaborador.reset()"></button>
             </div>
             <div class="modal-body p-4">
-                <form id="form_criar_colaborador" is="dmx-serverconnect-form" method="post" action="http://localhost:3000/api/criar-colaborador" site="backendMarte" dmx-on:error="notificacoes.danger('Ocorreu um erro: '+lastError.status+lastError.message+lastError.response+'. Entre em contato com o suporte.')" dmx-on:success="run([{condition:{outputType:'boolean',if:`form_criar_colaborador.data.resposta==\'Usuário já está associado a uma empresa!\'`,then:{steps:{run:{outputType:'text',action:`notificacoes.warning(form_criar_colaborador.data.resposta)`}}}}},{condition:{outputType:'boolean',if:`form_criar_colaborador.data.resposta==\'Usuário cadastrado com sucesso!\'`,then:{steps:{run:{outputType:'text',action:`form_criar_colaborador.reset();modal_criar.hide();notificacoes.success(form_criar_colaborador.data.resposta);listar_colaboradores.load({id_empresa_atual: usuario.data.query[0].empresa_selecionada})`}}}}}])">
+                <form id="form_criar_colaborador" is="dmx-serverconnect-form" method="post" action="http://localhost:3000/api/criar-colaborador" site="backendMarte" dmx-on:error="notificacoes.danger('Ocorreu um erro: '+lastError.status+lastError.message+lastError.response+'. Entre em contato com o suporte.')" dmx-on:success="run([{condition:{outputType:'boolean',if:`form_criar_colaborador.data.resposta==\'Usuário já está associado a uma empresa!\'`,then:{steps:{run:{outputType:'text',action:`notificacoes.warning(form_criar_colaborador.data.resposta)`}}}}},{condition:{outputType:'boolean',if:`form_criar_colaborador.data.resposta==\'Usuário cadastrado com sucesso!\'`,then:{steps:{run:{outputType:'text',action:`form_criar_colaborador.reset();listar_colaboradores.load({id_empresa_atual: usuario.data.query[0].empresa_selecionada});modal_criar.hide();listar_colaboradores.load({});notificacoes.success(\'Usuário cadastrado com sucesso!\')`}}}}}])">
 
                     <div class="row">
                         <div class="col">
@@ -31,6 +52,40 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" dmx-on:click="form_criar_colaborador.reset()">Cancelar</button>
                 <button type="button" class="btn btn-primary" dmx-on:click="form_criar_colaborador.submit()">Cadastrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal" id="modal_editar" is="dmx-bs5-modal" tabindex="-1" nocloseonclick="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Criar colaborador</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" dmx-on:click="form_criar_colaborador.reset()"></button>
+            </div>
+            <div class="modal-body p-4">
+                <form method="post" site="backendMarte" dmx-on:error="notificacoes.danger('Ocorreu um erro: '+lastError.status+lastError.message+lastError.response+'. Entre em contato com o suporte.')" dmx-on:success="listar_colaboradores.load({id_empresa_atual: usuario.data.query[0].empresa_selecionada});form_editar.reset();modal_editar.hide();notificacoes.success('Atualização realizada com sucesso!')" id="form_editar" is="dmx-serverconnect-form" action="http://localhost:3000/api/atualizar-colaborador">
+
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-group mb-3"> <label for="edit_nome_completo" class="form-label">Nome Completo</label>
+                                <input type="text" class="form-control" id="edit_nome_completo" name="edit_nome_completo" aria-describedby="input1_help" required="" data-msg-required="Este é um campo obrigatório." dmx-bind:value="data_colaborador.data.nome_completo">
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group mb-3"> <label for="edit_nome_tratamento" class="form-label">Nome de Tratamento</label>
+                                <input type="text" class="form-control" id="edit_nome_tratamento" name="edit_nome_tratamento" aria-describedby="input1_help1" required="" data-msg-required="Este é um campo obrigatório." dmx-bind:value="data_colaborador.data.nome_tratamento">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group mb-3"> <label for="edit_email" class="form-label">E-mail</label>
+                        <input type="email" class="form-control" id="edit_email" name="edit_email" aria-describedby="input3_help" required="" data-msg-required="Este é um campo obrigatório." data-rule-email="" data-msg-email="Insira um e-mal válido!" dmx-bind:value="data_colaborador.data.email">
+                    </div><input id="edit_id_usuario" name="edit_id_usuario" class="form-control" dmx-bind:value="data_colaborador.data.id_usuarios" type="hidden">
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" dmx-on:click="form_criar_colaborador.reset()">Cancelar</button>
+                <button type="button" class="btn btn-primary" dmx-on:click="form_editar.submit()">Atualizar</button>
             </div>
         </div>
     </div>
@@ -58,17 +113,30 @@
                         <th class="pb-3 titulo-tabela">Nome completo</th>
                         <th class="pb-3 titulo-tabela">Nome tratamento</th>
                         <th class="pb-3 titulo-tabela">Email</th>
-                        <th class="pb-3 titulo-tabela">Cargo usuario empresa</th>
-                        <th class="pb-3 titulo-tabela">Status usuario</th>
+                        <th class="pb-3 titulo-tabela">Função</th>
+                        <th class="pb-3 titulo-tabela">Status</th>
+                        <th scope="row" class="pb-3 titulo-tabela text-end">Ações</th>
                     </tr>
                 </thead>
-                <tbody is="dmx-repeat" dmx-generator="bs5table" dmx-bind:repeat="view1.listar_colaboradores.data.query_colaboradores" id="tableRepeat2">
+                <tbody is="dmx-repeat" dmx-generator="bs5table" dmx-bind:repeat="listar_colaboradores.data.query_colaboradores" id="tableRepeat1" key="id_usuarios">
                     <tr>
-                        <td dmx-text="nome_completo" class="py-3 texto-tabela fw-boldu"></td>
+                        <td dmx-text="nome_completo" class="py-3 texto-tabela fw-bold"></td>
                         <td dmx-text="nome_tratamento" class="py-3 texto-tabela"></td>
                         <td dmx-text="email" class="py-3 texto-tabela"></td>
                         <td dmx-text="cargo_usuario_empresa" class="py-3 texto-tabela"></td>
-                        <td dmx-text="status_usuario" class="py-3 texto-tabela"></td>
+                        <td class="py-3 texto-tabela">
+                            <span class="badge" dmx-class:text-bg-success="status_usuario == 'Ativo'" dmx-class:text-bg-danger="status_usuario == 'Inativo'" dmx-text="status_usuario">
+                            </span>
+                        </td>
+                        <td class="py-3 texto-tabela text-end">
+                            <div class="dropdown">
+                                <button id="dropdown1" class="btn dropdown-toggle btn-sm btn-light texto-tabela" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ações&nbsp;</button>
+                                <div class="dropdown-menu" aria-labelledby="dropdown1">
+                                    <a class="dropdown-item dropdown-item-menor curso-ponteiro" dmx-on:click="data_colaborador.select(id_usuarios);modal_editar.show()">Editar</a>
+                                    <a class="dropdown-item text-danger dropdown-item-menor curso-ponteiro" dmx-on:click="data_colaborador.select(id_usuarios);modal_desativar.show()">Desativar</a>
+                                </div>
+                            </div>
+                        </td>
                     </tr>
                 </tbody>
             </table>
