Inicio funil de vendas

--- a/www/interno/colaborador.html
+++ b/www/interno/colaborador.html
@@ -130,7 +130,7 @@
                         </td>
                         <td class="py-3 texto-tabela text-end">
                             <div class="dropdown">
-                                <button id="dropdown1" class="btn dropdown-toggle btn-sm btn-light texto-tabela" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ações&nbsp;</button>
+                                <button id="dropdown1" class="btn dropdown-toggle btn-sm btn-light texto-tabela" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" dmx-hide="status_usuario=='Inativo'">Ações&nbsp;</button>
                                 <div class="dropdown-menu" aria-labelledby="dropdown1">
                                     <a class="dropdown-item dropdown-item-menor curso-ponteiro" dmx-on:click="data_colaborador.select(id_usuarios);modal_editar.show()">Editar</a>
                                     <a class="dropdown-item text-danger dropdown-item-menor curso-ponteiro" dmx-on:click="data_colaborador.select(id_usuarios);modal_desativar.show()">Desativar</a>
