--- a/www/interno/funil-de-vendas.html
+++ b/www/interno/funil-de-vendas.html
@@ -1,8 +1,16 @@
 <!-- Wappler include head-page="backoffice.html" is="dmx-app" id="funildevendas" appConnect="local" bootstrap5="local" capacitor="local" -->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 p-4 rounded-4 bg-white">
-            <h1>Funil de vendas</h1>
+<div class="container-fluid mt-4 px-3 py-2">
+    <div class="row align-items-center">
+        <div class="col align-self-center">
+            <div class="d-flex flex-column align-items-start gap-1">
+                <h5 class="m-0">Funil de Vendas</h5>
+                <h6 class="m-0 breadcrumb-interno">Home - Negócios - Funil de Vendas</h6>
+            </div>
+        </div>
+        <div class="col align-self-center">
+            <div class="d-flex align-items-center gap-2 justify-content-end">
+                <button id="btn2" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal_criar">Adicionar</button>
+            </div>
         </div>
     </div>
 </div>
