--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -97,13 +97,16 @@
             </div>
         </div>
         <div class="row h-100">
-            <div class="col-1 text-center py-4 px-3">
+            <div class="col-1 text-center py-3 px-3">
                 <h6 class="text-center mb-3 mt-3 side-menu-title">Ferramentas</h6>
                 <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/empresa" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-home"></i>
                         <div class="side-menu-link">Empresa</div>
                     </a></div>
-                <div class="d-flex justify-content-center align-items-center"><a href="/in/security/colaborador" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-user-friends"></i>
+                <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/colaborador" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-user-friends"></i>
                         <div class="side-menu-link">Colaborador</div>
+                    </a></div>
+                <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/funil-de-vendas" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-filter"></i>
+                        <div class="side-menu-link">Funil</div>
                     </a></div>
 
             </div>
