Inicio pagina de times. criado rota, add link no layout.

--- a/www/interno/backoffice.html
+++ b/www/interno/backoffice.html
@@ -102,8 +102,11 @@
                 <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/empresa" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-home"></i>
                         <div class="side-menu-link">Empresa</div>
                     </a></div>
-                <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/colaborador" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-user-friends"></i>
+                <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/colaborador" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-briefcase"></i>
                         <div class="side-menu-link">Colaborador</div>
+                    </a></div>
+                <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/times" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-user-friends"></i>
+                        <div class="side-menu-link">Times</div>
                     </a></div>
                 <div class="d-flex justify-content-center align-items-center mb-3"><a href="/in/security/funil-de-vendas" class="btn text-center w-100 py-3 btn-secondary" internal="true"><i class="fas fa-filter"></i>
                         <div class="side-menu-link">Funil</div>
